LAU-264: Remove duplicate fortify config.